--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@web3-react/core": "^8.0.9-beta.0",
     "@web3-react/metamask": "^8.0.5-beta.0",
     "@web3-react/types": "^8.0.3-beta.0",
+    "axios": "^0.25.0",
     "ipfs-http-client": "^50.1.2",
     "next": "12.0.9",
     "react": "17.0.2",
